<resources>
    <string name="app_name">PTA-DESTINATION</string>
    <string name="app_title" translatable="false">PTA-Destination</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="action_map">Map</string>
    <string name="action_settings">Settings</string>
    <string name="siig_risk_form_title">Compute Standard Elaboration</string>
    <string name="action_search">Search</string>
    <string name="compute_text">Compute</string>
    <string name="risk_description_title">Risk Option Description</string>
    <string name="risk_description" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet nunc luctus, rutrum nulla et, congue nibh. Nunc risus est, dignissim et ultrices sed, maximus semper ex.</string>
    <string name="risk">Risk</string>
    <string name="road_risk_factor">Road Risk</string>
    <string name="road_risk_description_title">Road Risk Option Description</string>
    <string name="road_risk_description" translatable="false">Donec in justo eget justo feugiat maximus. Proin eleifend pretium turpis ac interdum.</string>
    <string name="title_activity_compute_form" translatable="false">ComputeFormActivity</string>
    <string name="title_activity_results">Load Result</string>
    <string name="download_base_data">Map files will be downloaded, do you want to proceed?</string>
    <string name="download_base_data_title">Download</string>
    <string name="not_enough_space">This application needs at least 290Mb of free space to work.\nCannot download required data.</string>
    <string name="map_config_error">Cannot configure the map</string>
    <string name="ok_string">OK</string>
    <string name="search_hint">Search location</string>
    <string name="place_not_covered">The selected place is not covered by the map file</string>
    <string name="not_online">You need to be online to use this service</string>
    <string name="elab_dialog_title">New Process</string>
    <string name="elab_dialog_enter_title">Enter a name for this process.</string>
    <string name="elab_name">Name</string>
    <string name="elab_description">Description</string>
    <string name="elab_enter_title">Enter a name please</string>
    <string name="elab_success">Name successfully saved</string>
    <string name="elab_failure">Failed to save the name for this process</string>
    <string name="elab_no_results">No processes available yet</string>
    <string name="bb_longitude">Longitude</string>
    <string name="bb_latitude">Latitude</string>
    <string name="bb_upperleft">Upper left</string>
    <string name="bb_lowerright">Lower right</string>
    <string name="clear">Clear</string>
    <string name="deleting">Deleting&#8230;</string>
    <string name="selected">selected</string>
    <string name="go_back">Go back to the map</string>
    <string name="please_wait">Please wait a moment&#8230;</string>
    <string name="snackbar_offline_text">You are Offline</string>
    <string name="snackbar_noparam_text">Incomplete parameters</string>
    <string name="snackbar_missing_map_text">Cannot find map extent</string>
    <string name="result_too_large">Query result has too much features, please retry with a smaller area.</string>
    <string name="result_empty">Query result is empty, please retry with another area.</string>
    <string name="query_ongoing">Querying&#8230;</string>
    <string name="saving_data">Saving&#8230;</string>
    <string name="compute_error">Server response is invalid, please try again later</string>
    <string name="pis_title">Street Risk</string>
    <string name="success_saving">Successfully saved the process %1$s for %2$s</string>
    <string name="error_saving">Error saving the process %s</string>
    <string name="delete_results_message">Do you really want to delete these results ?</string>
    <string name="formula_street">PIS formula</string>
    <string name="formula_risk">Risk formula</string>
    <string name="title_activity_info_display">InfoDisplayActivity</string>
    <string name="siig_info_page_title">Info</string>
    <string name="siig_info_page_text" translatable="false">
    <![CDATA[
        <style type="text/css">ol{margin:0;padding:0}.c1{padding-top:0pt;padding-bottom:10pt;line-height:1.1500000000000001;orphans:2;widows:2;direction:ltr}.c6{vertical-align:baseline;font-size:14pt;font-family:"Calibri";color:#548dd4;font-weight:normal}.c5{vertical-align:baseline;font-size:14pt;font-family:"Calibri";color:#548dd4;font-weight:bold}.c12{vertical-align:sub;font-size:11pt;font-family:"Calibri";font-weight:bold}.c11{vertical-align:sub;font-size:11pt;font-family:"Arial";font-weight:bold}.c2{vertical-align:baseline;font-size:11pt;font-family:"Calibri";font-weight:normal}.c13{vertical-align:baseline;font-size:14pt;font-family:"Calibri";font-weight:normal}.c3{vertical-align:baseline;font-size:12pt;font-family:"Calibri";font-weight:bold}.c0{vertical-align:baseline;font-size:12pt;font-family:"Calibri";font-weight:normal}.c9{vertical-align:baseline;font-size:11pt;font-family:"Arial";font-weight:bold}.c7{vertical-align:baseline;font-size:11pt;font-family:"Calibri";font-weight:bold}.c15{background-color:#ffffff;max-width:481.9pt;padding:70.8pt 56.7pt 56.7pt 56.7pt}.c8{margin-left:21pt;padding-left:0pt}.c10{padding:0;margin:0}.c4{height:11pt}.c14{margin-left:18pt}.title{padding-top:24pt;color:#000000;font-weight:bold;font-size:36pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}.subtitle{padding-top:18pt;color:#666666;font-size:24pt;padding-bottom:4pt;font-family:"Georgia";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}li{color:#000000;font-size:11pt;font-family:"Arial"}p{margin:0;color:#000000;font-size:11pt;font-family:"Arial"}h1{padding-top:24pt;color:#000000;font-weight:bold;font-size:24pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h2{padding-top:18pt;color:#000000;font-weight:bold;font-size:18pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h3{padding-top:14pt;color:#000000;font-weight:bold;font-size:14pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h4{padding-top:12pt;color:#000000;font-weight:bold;font-size:12pt;padding-bottom:2pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h5{padding-top:11pt;color:#000000;font-weight:bold;font-size:11pt;padding-bottom:2pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h6{padding-top:10pt;color:#000000;font-weight:bold;font-size:10pt;padding-bottom:2pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}</style><p class="c1">
        <span class="c5">Rischio &nbsp;Totale </span></p><p class="c1"><span class="c2">Per rischio totale si intende la &nbsp;</span><span class="c0">Valutazione Rischio complessivo antropico e/o ambientale a scala di dettaglio.</span></p><p class="c1"><span class="c0">Il rischio viene rappresentato su un arco di strada. Sulla mappa viene rappresentato su archi di 100m, 500m , griglia o rappresentazione comunale / provinciale a seconda della scala di rappresentazione selezionata. </span></p><p class="c1"><span class="c3">La formula </span></p><p class="c1"><span class="c0">∑ (Pis x ∑ (Padr x ∑(Psc x ∑ (Fp x (ExS) x (1- Cff)))))</span></p><p class="c1"><span class="c2">I pedici rappresentano:</span></p><p class="c1"><span class="c7">i= arco &nbsp; &nbsp; &nbsp; &nbsp; j = sostanza &nbsp; &nbsp; &nbsp; &nbsp;k=scenario &nbsp; &nbsp; &nbsp; m = tipo bersaglio &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; g= gravità</span></p><p class="c1"><span class="c2">I parametri sono: </span></p><p class="c1 c14"><span class="c7">R</span><span class="c12">dest </span><span class="c2">&nbsp;= </span><span class="c9">∑</span><span class="c11">i &nbsp;</span><span class="c9">R</span><span class="c11">&nbsp;i = </span><span class="c2">&nbsp;rischio cumulato “destination” composto da </span><span class="c7">R</span><span class="c12">amb</span><span class="c2">&nbsp;(rischio ambientale) e </span><span class="c7">R</span><span class="c12">soc </span><span class="c2">(rischio sociale) </span></p><p class="c1"><span class="c2">LA formula non &nbsp;rappresenta uan &nbsp;sommatoria perché il Rischio ambientale e il Rischio sociale non hanno la stessa unità di misura. il rischio cumulato &nbsp;viene rappresentato con una tematizzazione (colori) che esprime il grado di rischio per ciascun segmento. Possibilmente gli intervalli della tematizzazione devono essere modificabili dall’utente con un cursore.</span></p><p class="c1"><span class="c3">L’unità di misura </span></p><p class="c1"><span class="c0">[morti/km/anno] o [m2eq con danni/km/anno]</span></p><p class="c1 c4"><span class="c13"></span></p>
    ]]>
    </string>
    <string name="siig_credits_page_title">Credits</string>
    <string translatable="false" name="siig_credits_page_text">
        <![CDATA[
<p><img src="logo_PTA_DESTINATION.jpg" style="height:93px; width:93px" /><img src="logo_destination.jpg" style="height:93px; width:227px" /></p>

<p><strong>La APP nasce all&rsquo;interno del progetto PTA-DESTINATION - Conoscere il trasporto di merci pericolose come strumento di tutela del territorio&nbsp;</strong><br />
Il progetto ha &nbsp;definito una metodologia di analisi di rischio associato al trasporto merci pericolose attraverso lo sviluppo di un sistema informativo &nbsp;di condivisione dei dati ambientali, territoriali e tecnici sul trasporto di merci pericolose su strada (TMP).</p>

<p>&nbsp;</p>

<p><img src="logo_interreg.jpg" style="height:94px; width:94px" /></p>

<p>Progetto strategico Programma Operativo di cooperazione Transfrontaliera IT-CH 2007-2013 -Tavolo Ambiente</p>

<p>&nbsp;</p>

<p><strong>Territorio coinvolto</strong></p>

<p>Italia &ndash; Regioni del Nord Ovest e Provincia di Bolzano<br />
Svizzera - Canton Ticino</p>

<p><strong>Partner</strong></p>

<p><img src="logo_regione_piemonte.jpg" style="height:39px; width:124px" />&nbsp;Regione Piemonte - Dir. Ambiente (capofila), Dir. Trasporti, Dir. OO.PP.</p>

<p>&nbsp;</p>

<p><img src="logo_regione_lombardia.gif" style="height:58px; width:114px" />&nbsp;&nbsp; Regione Lombardia - D.G.Ambiente, Energia e Reti; D.G. Protezione Civile</p>

<p><img src="bolzano.jpg" style="height:59px; width:119px" />&nbsp; Provincia Autonoma di Bolzano - Ripartizione Protezione antincendi e civile</p>

<p><img src="regione-vda-nuovo_345_l.jpg" style="height:80px; width:81px" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;Regione Autonoma Valle d&#39;Aosta - Dir. servizi antincendio e di soccorso</p>

<p><img src="2bdf565.png" style="height:48px; width:78px" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Canton Ticino - Dir. Ambiente</p>
    ]]>
    </string>
    <string name="val_coordinate">Coordinate</string>
    <string name="val_name">Name</string>
    <string name="val_method">Method</string>
    <string name="val_buffer_width">Buffer Width</string>
    <string name="val_buffer_width_hint">Enter the buffer width</string>
    <string name="val_single_substance">Single Substance</string>
    <string name="val_scenario">Danger scenario</string>
    <string name="val_accident">Accident</string>
    <string name="val_entity">Entity</string>
    <string name="val_enter_description_hint">Enter a description</string>
    <string name="enter_buffer_width">Please enter a buffer width</string>
    <string name="accident_select">Select an accident please</string>
    <string name="touch_point">Touch the center of the damage evaluation</string>
</resources>