<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/bike_add_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bb_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/bb_upperleft" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/bb_longitude" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/bb_latitude" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_upper_left_lon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/tv_upper_left_lat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_lower_right_lon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/tv_lower_right_lat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/bb_lowerright" />

    </LinearLayout>


    <TextView
        android:id="@+id/enter_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/elab_dialog_enter_title"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/elab_name"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <EditText
        android:id="@+id/title_field"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="start">
        <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/elab_description"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <EditText
        android:id="@+id/description_field"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start">
    </EditText>


</LinearLayout>